display tweets and basic serach

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bookmark Manager</title>
-    <link href="./output.css" rel="stylesheet">
+    <link href="./input.css" rel="stylesheet">
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">
-      Hello world!
-    </h1>
+    <div>
+      <h1>Recurate</h1>
+      <input type="text" id="myInput" onkeyup="loadTweets()" placeholder="Search for tweets...">
+      <div id="all_tweets">
+
+
+      </div>
+    </div>
     <script src="./live_reload/client.js"></script>
-    <script src="./"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
