semantic search using lancedb

--- a/src/semant.html
+++ b/src/semant.html
@@ -10,9 +10,9 @@
   <body>
     <div>
       <h1>Recurate</h1>
-      <input type="text" id="myInput" onkeyup="loadTweets()" placeholder="Search for tweets...">
-      <a href="semant.html"><h2>Semantic Search</h2><a>
-      <div id="all_tweets">
+      <input type="text" id="myInput2" placeholder="Search for tweets...">
+      <button id="search_btn" onclick="semanticSearch()">Search</button>
+      <div id="all_tweets2">
 
 
       </div>
