--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
           <input type="text" id="myInput" onkeyup="loadTweets()" placeholder="Search for tweets...">
           <div class="toggle">
             <label class="switch">
-              <input type="checkbox">
+              <input id="toggleCheck" type="checkbox">
               <span class="slider round"></span>
             </label>
             <p>Semantic Search</p>
@@ -23,8 +23,6 @@
         </div>
       </div>
       <div id="all_tweets">
-
-
       </div>
     </div>
     <script src="./live_reload/client.js"></script>
