--- a/src/scrape/scrape_extension/popup.html
+++ b/src/scrape/scrape_extension/popup.html
@@ -10,6 +10,7 @@
         margin: 0;
       }
       .container {
+        display: flex;
         width: 100%; 
         background-color: #f0f0f0;
         padding: 20px; 
@@ -20,6 +21,7 @@
   <body>
     <div class="container">
       <button id="scraper">Scrape Tweets</button>
+      <button id="imgScraper">Scrape Imgs</button>
     </div>
     <script src="popup.js"></script>
   </body>
