search over images ui

--- a/src/memeSearch.html
+++ b/src/memeSearch.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Recurate</title>
+    <title>memeSearch</title>
     <link href="./input.css" rel="stylesheet">
-  </head>
-  <body>
+</head>
+<body>
+    <h1>Image Search Results</h1>
+    <input placeholder="Search imgs..." id="search_input"/>
+    <button id="search_img">Search imgs</button>
+    <div id="all_imgs"></div>
+
     <script src="./live_reload/client.js"></script>
-    <script src="./index.js"></script>
-  </body>
+    <script src="memeSearch.js"></script>
+</body>
 </html>
-
-
