--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <div>
       <div id="nav">
         <h1>Recurate</h1>
+        <a href="memeSearch.html">memeSearch</a>
         <div id="nav_search">
           <input type="text" id="myInput" onkeyup="loadTweets()" placeholder="Search for tweets...">
           <div class="toggle">
@@ -21,6 +22,12 @@
             <p>Semantic Search</p>
           </div>
         </div>
+      </div>
+      <div>
+        <button class="label_btn" value="computer_science">computer_science</button>
+        <button class="label_btn" value="physics">physics</button>
+        <button class="label_btn"value="math">maths</button>
+        <button class="label_btn"value="others">others</button>
       </div>
       <div id="all_tweets">
       </div>
